base: preserve current gallery/user work before events merge